--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul></ul>
         </div>
         <div class="empty">
-            <p>No hay taras pendientes</p>
+            <p>No hay tareas pendientes</p>
         </div>
 
 
