--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <button class="btn-add">+</button>
             </form>
         </div>
+        <div class="encabezado">
+            <p>Prioridad</p>
+            <p>Estado</p>
+        </div>
         <div class="li-container">
             <ul></ul>
         </div>
